fixed pic alignment issue

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -184,6 +184,7 @@ a:hover{
     }
     .wp-caption p {
         padding-top: 6px;
+        padding-bottom: 6px;
         font-size: $main-font-size;
         font-family: Roboto;
     }
